# AL_USDMaya

./: .gitignore  AnimationTranslator_8h_source.html  Api_8h_source.html  AttributeType_8h_source.html  CMakeLists.txt  CameraTranslator_8h_source.html  CodeTimings_8h_source.html  DagNodeTranslator_8h_source.html  DebugCodes_8h_source.html  DebugCommands_8h_source.html  DgNodeTranslator_8h_source.html  DrivenTransformsData_8h_source.html  DrivenTransforms_8h_source.html  EventCommand_8h_source.html  ExportParams_8h_source.html  ExportTranslator_8h_source.html  Export_8h_source.html  ForwardDeclares_8h_source.html  Global_8h_source.html  ImportParams_8h_source.html  ImportTranslator_8h_source.html  Import_8h_source.html  LayerCommands_8h_source.html  LayerManager_8h_source.html  Layer_8h_source.html  MeshTranslator_8h_source.html  Metadata_8h.html  Metadata_8h_source.html  NodeFactory_8h_source.html  NurbsCurveTranslator_8h_source.html  PluginRegister_8h_source.html  PrimFilter_8h_source.html  ProxyDrawOverride_8h_source.html  ProxyShapeCommands_8h_source.html  ProxyShapePostLoadProcess_8h_source.html  ProxyShapeSelectCommands_8h_source.html  ProxyShapeUI_8h_source.html  ProxyShape_8h_source.html  SchemaPrims_8h_source.html  SelectabilityDB_8h_source.html  (+311 more)
2018build/: ALUsdMayaConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
docs/: build.md
doxygen/: Doxyfile
plugin/AL_USDMayaPlugin/: CMakeLists.txt  plugin.cpp
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  (+38 more)
(+175 files in other folders)
